# Calculator

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  calculator_code_stats.md  png_to_icns.sh
resources/: Calculator.desktop  Calculator.icns  Calculator.manifest  DMGSetup.scpt  arr.rc
src/: Application.cpp  Application.hpp  TitleBarCustomizer.h  TitleBarCustomizer.mm  main.cpp  resources.qrc
